Roboczo - nowy form

--- a/XML Parser/App.config
+++ b/XML Parser/App.config
@@ -1,6 +1,33 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="XML_Parser.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+    <applicationSettings>
+        <XML_Parser.Properties.Settings>
+            <setting name="ErrorLineCode" serializeAs="String">
+                <value>1234</value>
+            </setting>
+            <setting name="ArnFieldPosition" serializeAs="String">
+                <value>5</value>
+            </setting>
+            <setting name="MessageTextPosition" serializeAs="String">
+                <value>7</value>
+            </setting>
+            <setting name="ErrorCodePosition" serializeAs="String">
+                <value>8</value>
+            </setting>
+            <setting name="DeleteFIle" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="IncomingFilesPath" serializeAs="String">
+                <value>D:\OneDrive\Dev\Temp\csv</value>
+            </setting>
+        </XML_Parser.Properties.Settings>
+    </applicationSettings>
 </configuration>
