--- a/XML Parser/App.config
+++ b/XML Parser/App.config
@@ -2,6 +2,7 @@
 <configuration>
     <configSections>
         <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="CSV_Parser.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
             <section name="XML_Parser.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
     </configSections>
@@ -9,6 +10,26 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
     <applicationSettings>
+        <CSV_Parser.Properties.Settings>
+            <setting name="ErrorLineCode" serializeAs="String">
+                <value>1234</value>
+            </setting>
+            <setting name="ArnFieldPosition" serializeAs="String">
+                <value>1</value>
+            </setting>
+            <setting name="MessageTextPosition" serializeAs="String">
+                <value>7</value>
+            </setting>
+            <setting name="ErrorCodePosition" serializeAs="String">
+                <value>8</value>
+            </setting>
+            <setting name="DeleteFIle" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="IncomingFilesPath" serializeAs="String">
+                <value>D:\OneDrive\Dev\Temp\csv</value>
+            </setting>
+        </CSV_Parser.Properties.Settings>
         <XML_Parser.Properties.Settings>
             <setting name="ErrorLineCode" serializeAs="String">
                 <value>1234</value>
@@ -23,7 +44,7 @@
                 <value>8</value>
             </setting>
             <setting name="DeleteFIle" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
             </setting>
             <setting name="IncomingFilesPath" serializeAs="String">
                 <value>D:\OneDrive\Dev\Temp\csv</value>
