--- a/XML Parser/Properties/Settings.settings
+++ b/XML Parser/Properties/Settings.settings
@@ -1,12 +1,12 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="XML_Parser.Properties" GeneratedClassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="CSV_Parser.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
     <Setting Name="ErrorLineCode" Type="System.String" Scope="Application">
       <Value Profile="(Default)">1234</Value>
     </Setting>
     <Setting Name="ArnFieldPosition" Type="System.Int32" Scope="Application">
-      <Value Profile="(Default)">5</Value>
+      <Value Profile="(Default)">1</Value>
     </Setting>
     <Setting Name="MessageTextPosition" Type="System.Int32" Scope="Application">
       <Value Profile="(Default)">7</Value>
@@ -15,7 +15,7 @@
       <Value Profile="(Default)">8</Value>
     </Setting>
     <Setting Name="DeleteFIle" Type="System.Boolean" Scope="Application">
-      <Value Profile="(Default)">False</Value>
+      <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="IncomingFilesPath" Type="System.String" Scope="Application">
       <Value Profile="(Default)">D:\OneDrive\Dev\Temp\csv</Value>
