Skończone. Jeszcze obsługa błędów IO.

--- a/XML Parser/App.config
+++ b/XML Parser/App.config
@@ -29,6 +29,9 @@
             <setting name="IncomingFilesPath" serializeAs="String">
                 <value>D:\OneDrive\Dev\Temp\csv</value>
             </setting>
+            <setting name="AddDays" serializeAs="String">
+                <value>1</value>
+            </setting>
         </CSV_Parser.Properties.Settings>
         <XML_Parser.Properties.Settings>
             <setting name="ErrorLineCode" serializeAs="String">
