--- a/XML Parser/CSV Parser.csproj
+++ b/XML Parser/CSV Parser.csproj
@@ -8,7 +8,7 @@
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>CSV_Parser</RootNamespace>
-    <AssemblyName>CSV Parser</AssemblyName>
+    <AssemblyName>MC Error Check</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
