--- a/XML Parser/Properties/Settings.settings
+++ b/XML Parser/Properties/Settings.settings
@@ -20,5 +20,8 @@
     <Setting Name="IncomingFilesPath" Type="System.String" Scope="Application">
       <Value Profile="(Default)">D:\OneDrive\Dev\Temp\csv</Value>
     </Setting>
+    <Setting Name="AddDays" Type="System.Int32" Scope="Application">
+      <Value Profile="(Default)">1</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
