--- a/XML Parser/App.config
+++ b/XML Parser/App.config
@@ -12,16 +12,16 @@
     <applicationSettings>
         <CSV_Parser.Properties.Settings>
             <setting name="ErrorLineCode" serializeAs="String">
-                <value>1234</value>
+                <value>11223344</value>
             </setting>
             <setting name="ArnFieldPosition" serializeAs="String">
                 <value>1</value>
             </setting>
             <setting name="MessageTextPosition" serializeAs="String">
-                <value>7</value>
+                <value>1</value>
             </setting>
             <setting name="ErrorCodePosition" serializeAs="String">
-                <value>8</value>
+                <value>2</value>
             </setting>
             <setting name="DeleteFIle" serializeAs="String">
                 <value>True</value>
