--- a/XML Parser/Properties/Settings.settings
+++ b/XML Parser/Properties/Settings.settings
@@ -3,16 +3,16 @@
   <Profiles />
   <Settings>
     <Setting Name="ErrorLineCode" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">1234</Value>
+      <Value Profile="(Default)">11223344</Value>
     </Setting>
     <Setting Name="ArnFieldPosition" Type="System.Int32" Scope="Application">
       <Value Profile="(Default)">1</Value>
     </Setting>
     <Setting Name="MessageTextPosition" Type="System.Int32" Scope="Application">
-      <Value Profile="(Default)">7</Value>
+      <Value Profile="(Default)">1</Value>
     </Setting>
     <Setting Name="ErrorCodePosition" Type="System.Int32" Scope="Application">
-      <Value Profile="(Default)">8</Value>
+      <Value Profile="(Default)">2</Value>
     </Setting>
     <Setting Name="DeleteFIle" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">True</Value>
